# Aqua

./: .gitignore
project/: .gitignore  Makefile
project/components/pn532/: CMakeLists.txt  pn532.c  pn532.h
project/components/vl53l0x/: CMakeLists.txt  vl53l0x.c  vl53l0x_api_strings.c  vl53l0x_platform.c
project/components/vl53l0x/include/: vl53l0x_platform.h  vl53l0x_platform_log.h
project/main/: Kconfig.projbuild  app.c  iot.c
